--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -50,7 +50,7 @@
 
     <section class="project_preview">
         <img src="../images/currencyProjectSnip.png" alt="project 4 screenshot" class="screenshot d-md-block d-none">
-        <img src="../images/project4_snip_mobile.png" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/currencyProjectMobileSnip.png" class="screenshot_mobile d-block d-md-none">
     </section>
 
     <footer>
@@ -66,7 +66,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="../images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
+                    <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
