--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="#">
-                    <div class="logo"> <img src="./images/logo.png" alt="logo"></div>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                    <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
                 <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
@@ -86,7 +86,7 @@
     </section>
 
     <section id="projects" class="project_section">
-        <h2 class="project_header oxanium-600">My Projects</h2>
+        <h2 class="project_header josefin-bold">My Projects</h2>
 
         <div class="project_card_area">
 
@@ -94,9 +94,7 @@
                 <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
-                    <p class="josefin-light"> class="josefin-light"Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit.
-                        <p />
+                    <p class="josefin-light">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
                         <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -115,7 +113,7 @@
                 <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Travel Agency Contact Page</h3>
-                    <p class="josefin-light">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p class="josefin-light">Beautiful and elegant landing page for a travel agency. Built with HTML and CSS.</p>
                     <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -151,6 +149,16 @@
             </div>
 
             <div class="project_card">
+                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt=""></div>
+                <div class="project_card_text">
+                    <h3 class="project_card_title oxanium-600">Cryptocurrency Exchange</h3>
+                    <p class="josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase website. Built with HTML, CSS, and Bootstrap.
+                    </p>
+                    <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
+                </div>
+            </div>
+
+            <div class="project_card">
                 <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
 
                 <div class="project_card_text">
@@ -170,23 +178,12 @@
                     <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
                 </div>
             </div>
-
-            <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/coins.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title oxanium-600">Currency Exchange</h3>
-                    <p class="josefin-light">Modern and clean sign in for an online currrency exchange. Built with HTML,
-                        CSS, and Bootstrap.
-                    </p>
-                    <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
-                </div>
-            </div>
         </div>
     </section>
 
     <section id="contact_section">
         <div class="contact_container">
-            <h2 class="oxanium-600">Contact Me</h2>
+            <h2 class="josefin-bold pt-2">Contact Me</h2>
             <form action="" class="contact_form josefin-light">
                 <div class="contact_field ">
                     <input type="text" placeholder="Name" class="contact_input">
