--- a/projects/Travel_Project/index.html
+++ b/projects/Travel_Project/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 6</title>
+    <title>Travel Agency Project</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Assistant:wght@200..800&display=swap&family=Heebo:wght@100..900&display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
@@ -16,7 +21,7 @@
         <div class="grid-item" id="img2"><img src="./images/Rectangle 514.png" alt="two women"></div>
         <div class="grid-item" id="banner">
             <h2>לגלות את העולם</h2>
-            <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכ.</p>
+            <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכה.</p>
         </div>
         <div class="grid-item"><img src="./images/Rectangle 516.png" alt="beach"></div>
         <div class="grid-item"><img src="./images/Rectangle 506-5.png" alt="cow"></div>
@@ -26,7 +31,7 @@
         <div class="grid-item"><img src="./images/Rectangle 506-1.png" alt="forest"></div>
         <div class="grid-item" id="form">
             <h3>ספרו לנו על החוויה שלכם</h3>
-            <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכ.</p>
+            <p>לורם איפסום או בקיצור ליפסום, הוא מלל מקובל וחסר משמעות המשמש “ממלא מקום” בעת עריכה.</p>
 
             <div class="form_fields">
                 <label for="fullName">שם מלא</label>
