--- a/html/baskeballProjectPage.html
+++ b/html/baskeballProjectPage.html
@@ -9,7 +9,9 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
 </head>
 
@@ -17,8 +19,8 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="../index.html">
-                    <div class="logo"> <img src="../images/logo.png" alt="logo"></div>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                    <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
             </div>
