--- a/html/deliveryProjectPage.html
+++ b/html/deliveryProjectPage.html
@@ -20,8 +20,8 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="../index.html">
-                    <div class="logo"> <img src="../images/logo.png" alt="logo"></div>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                    <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
             </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="../images/linkedin_icon.png" alt="linkedin icon"></div>
-                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
+                    <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
