--- a/html/coffeeProjectPage.html
+++ b/html/coffeeProjectPage.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
 </head>
@@ -19,8 +19,8 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="../index.html">
-                    <div class="logo"> <img src="../images/logo.png" alt="logo"></div>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
+                    <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
             </div>
@@ -68,7 +68,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="../images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
+                    <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
