--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <div class="aboutMe_wrapper">
                 <div class="aboutMe_text">
                     <h2 class="oxanium-600">About Me</h2>
-                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and Bootstrap. I have also
+                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually
+                        complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and
+                        Bootstrap. I have also
                         done some studying of UI design and am familiar with Figma and Adobe Illustrator.
                     </p>
                     <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
@@ -90,22 +92,16 @@
 
         <div class="project_card_area">
 
-            <div class="project_card">
-                <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
-                    <p class="josefin-light">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
-                        <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
-                </div>
-            </div>
+
 
             <div class="project_card">
                 <div class="project_card_img"><img src="./images/Coffee.png" alt="" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Coffee Coupon Sign Up</h3>
-                    <p class="josefin-light"> A clean and beautiful sign up to receive a coupon for a free coffee.
-                        <p />
-                        <button class="btn_styling"><a href="./html/coffeeProjectPage.html">Project Page</a></button>
+                    <p class="josefin-light"> A clean and beautiful sign up to receive a coupon for a free coffee. Built
+                        with HTML and CSS.</p>
+                    <!-- <div class="card_icons"><i class="fa-brands fa-2x fa-html5 mb-3"></i></div> -->
+                    <button class="btn_styling"><a href="./html/coffeeProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -113,7 +109,8 @@
                 <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Travel Agency Contact Page</h3>
-                    <p class="josefin-light">Beautiful and elegant landing page for a travel agency. Built with HTML and CSS.</p>
+                    <p class="josefin-light">Beautiful and elegant landing page for a travel agency. Built with HTML and
+                        CSS.</p>
                     <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
                 </div>
             </div>
@@ -130,16 +127,6 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
-                <div class="project_card_text">
-                    <h3 class="project_card_title oxanium-600">Consulting Firm Contact Page</h3>
-                    <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
-                        and SASS.</p>
-                    <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
-                </div>
-            </div>
-
-            <div class="project_card">
                 <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Gift Card Sign Up Page</h3>
@@ -149,12 +136,22 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
                 <div class="project_card_text">
-                    <h3 class="project_card_title oxanium-600">Cryptocurrency Exchange</h3>
-                    <p class="josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase website. Built with HTML, CSS, and Bootstrap.
+                    <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
+                    <p class="josefin-light">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.
                     </p>
-                    <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
+                    <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
+                </div>
+            </div>
+
+            <div class="project_card">
+                <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
+                <div class="project_card_text">
+                    <h3 class="project_card_title oxanium-600">Consulting Firm Contact Page</h3>
+                    <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
+                        and SASS.</p>
+                    <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
@@ -176,6 +173,17 @@
                     <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML
                         and CSS.</p>
                     <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
+                </div>
+            </div>
+
+            <div class="project_card">
+                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt=""></div>
+                <div class="project_card_text">
+                    <h3 class="project_card_title oxanium-600">Cryptocurrency Exchange</h3>
+                    <p class="josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase website. Built
+                        with HTML, CSS, and Bootstrap.
+                    </p>
+                    <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
                 </div>
             </div>
         </div>
