--- a/html/baskeballProjectPage.html
+++ b/html/baskeballProjectPage.html
@@ -19,7 +19,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
                     <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="footer_items">
                     <div><img src="../images/linkedin_icon.png" alt=""></div>
-                    <p>www.linkedin.com/in/<br>simcha-lapp-0b4081106</p>
+                    <p><a href="https://www.linkedin.com/in/simcha-lapp-0b4081106">LinkedIn Profile</a></p>
                 </div>
             </div>
         </div>
