--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -19,8 +19,8 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white" href="../index.html">
-                    <div class="logo"> <img src="../images/logo.png" alt="logo"></div>
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
+                    <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
             </div>
