--- a/html/deliveryProjectPage.html
+++ b/html/deliveryProjectPage.html
@@ -20,7 +20,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
                     <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
