--- a/html/travelProjectPage.html
+++ b/html/travelProjectPage.html
@@ -19,7 +19,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg ">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="#">
+                <a class="navbar-brand d-flex align-items-center gap-2 text-white p-0" href="../index.html">
                     <span class="logo oxanium-600">{SL}</span>
                     Simcha Lapp
                 </a>
@@ -47,8 +47,8 @@
     </section>
 
     <section class="project_preview">
-        <img src="../images/project6_snip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../images/project5_snip_mobile.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/travelProjectSnip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
+        <img src="../images/travelProjectMobileSnip.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
