--- a/projects/Consulting_Project/index.html
+++ b/projects/Consulting_Project/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consulting Contact</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/main.css">
@@ -50,8 +53,8 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-4 col-12 d-flex gap-4 my-4 align-items-center justify-content-center">
+        <div class="row social-box">
+            <div class="col-md-4 col-12 d-flex gap-4 align-items-center justify-content-center">
                 <div class="social"><img src="./images/fb2_icon.png" alt="" height="40">
                 </div>
 
@@ -69,7 +72,7 @@
             </div>
         </div>
 
-        <div class="row mb-4">
+        <div class="row ">
             <div class="col-7 position-fixed bottom-0 bottom-line"></div>
         </div>
     </div>
