--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="hero_section">
         <div class="hero_box">
             <div class="hero_img">
-                <img src="./images/hi.jpg" alt="">
+                <img src="./images/hi.jpg" alt="man waving">
             </div>
 
             <div class="hero_text">
@@ -58,32 +58,30 @@
     </section>
 
     <section id="aboutMe_section">
-        <div class="aboutMe_container">
-            <div class="aboutMe_wrapper">
-                <div class="aboutMe_text">
-                    <h2 class="oxanium-600">About Me</h2>
-                    <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually
-                        complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and
-                        Bootstrap. I have also
-                        done some studying of UI design and am familiar with Figma and Adobe Illustrator.
-                    </p>
-                    <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
-                            CV</a></button>
+        <div class="aboutMe_wrapper">
+            <div class="aboutMe_text">
+                <h2 class="oxanium-600">About Me</h2>
+                <p class="josefin-light">I am studying to be a fullstack web developer with a focus on visually
+                    complex, responsive, and interactive designs. As of now, I have learned HTML, CSS, SASS, and
+                    Bootstrap. I have also
+                    done some studying of UI design and am familiar with Figma and Adobe Illustrator.
+                </p>
+                <button class="btn_styling"><a href="Resume.pdf" download="Simcha Lapp CV">Download my
+                        CV</a></button>
 
-                    <div class="icon_container">
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-figma"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-bootstrap"></i></div>
-                        <div class="coding_icons" id="icon"><i class="fa-brands fa-3x fa-sass"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-js"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-node"></i></div>
-                        <div class="coding_icons"><i class="fa-brands fa-3x fa-react"></i></div>
-                    </div>
-
+                <div class="icon_container">
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-figma"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-html5"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x  fa-css3-alt"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-bootstrap"></i></div>
+                    <div class="coding_icons" id="icon"><i class="fa-brands fa-2x fa-sass"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-js"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-node"></i></div>
+                    <div class="coding_icons"><i class="fa-brands fa-2x fa-react"></i></div>
                 </div>
-                <img src="./images/profile pic.jpg" alt="" class="aboutMe_img">
+
             </div>
+            <img src="./images/profile pic.jpg" alt="profile picture" class="aboutMe_img">
         </div>
     </section>
 
@@ -95,10 +93,11 @@
 
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/Coffee.png" alt="" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/Coffee.png" alt="coffee mug" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Coffee Coupon Sign Up</h3>
-                    <p class="josefin-light"> A clean and beautiful sign up to receive a coupon for a free coffee. Built
+                    <p class="project_blurb josefin-light">A clean and beautiful sign up to receive a coupon for a free
+                        coffee. Built
                         with HTML and CSS.</p>
                     <!-- <div class="card_icons"><i class="fa-brands fa-2x fa-html5 mb-3"></i></div> -->
                     <button class="btn_styling"><a href="./html/coffeeProjectPage.html">Project Page</a></button>
@@ -106,20 +105,22 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt=""></div>
+                <div class="project_card_img"><img src="./images/Rectangle 506-1.png" alt="forest"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Travel Agency Contact Page</h3>
-                    <p class="josefin-light">Beautiful and elegant landing page for a travel agency. Built with HTML and
+                    <p class="project_blurb josefin-light">Beautiful and elegant landing page for a travel agency. Built
+                        with HTML and
                         CSS.</p>
                     <button class="btn_styling"><a href="./html/travelProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/coding_background.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/coding_background.jpg" alt="programming code"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Coding Course Sign Up</h3>
-                    <p class="josefin-light">A sign up for a coding course with a bright and abstract design. Built with
+                    <p class="project_blurb josefin-light">A sign up for a coding course with a bright and abstract
+                        design. Built with
                         HTML, CSS, and SASS.
                     </p>
                     <button class="btn_styling"><a href="./html/codingProjectPage.html">Project Page</a></button>
@@ -127,40 +128,44 @@
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/mall.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/mall.jpg" alt="shopping mall"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Gift Card Sign Up Page</h3>
-                    <p class="josefin-light">A summery and young sign up page. Built with HTML, CSS, and SASS.</p>
+                    <p class="project_blurb josefin-light">A summery and young sign up page. Built with HTML, CSS, and
+                        SASS.</p>
                     <button class="btn_styling"><a href="./html/giftcardProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/package.jpg" alt="" class="cardimg"></div>
+                <div class="project_card_img"><img src="./images/package.jpg" alt="delivery truck" class="cardimg">
+                </div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Delivery Company Homepage</h3>
-                    <p class="josefin-light">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.
+                    <p class="project_blurb josefin-light">A funky and retro delivery service. Built using HTML, CSS,
+                        and Bootstrap.
                     </p>
                     <button class="btn_styling"><a href="./html/deliveryProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/handshake.jpg" alt=""></div>
+                <div class="project_card_img"><img src="./images/handshake.jpg" alt="handshake"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Consulting Firm Contact Page</h3>
-                    <p class="josefin-light">A funky contact page for a consulting firm. Built with HTML, CSS, Bootstrap
+                    <p class="project_blurb josefin-light">A funky contact page for a consulting firm. Built with HTML,
+                        CSS, Bootstrap
                         and SASS.</p>
                     <button class="btn_styling"><a href="./html/consultingProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img"><img src="./images/basketball.jpg" alt=""></div>
-
+                <div class="project_card_img"><img src="./images/basketball.jpg" alt="basketball hoop"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Basketball League Login Page</h3>
-                    <p class="josefin-light"> A youthful and fun login page for a summer basketball league. Built
+                    <p class="project_blurb josefin-light"> A youthful and fun login page for a summer basketball
+                        league. Built
                         with HTML and CSS.</p>
                     <button class="btn_styling"><a href="./html/baskeballProjectPage.html">Project Page</a></button>
                 </div>
@@ -170,17 +175,19 @@
                 <div class="project_card_img"><img src="./images/tiger.jpg" alt="tiger" class="cardimg"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Zoo Newsletter</h3>
-                    <p class="josefin-light">An interesting and outdoorsy newsletter sign up for a zoo. Built with HTML
+                    <p class="project_blurb josefin-light">An interesting and outdoorsy newsletter sign up for a zoo.
+                        Built with HTML
                         and CSS.</p>
                     <button class="btn_styling"><a href="./html/zooProjectPage.html">Project Page</a></button>
                 </div>
             </div>
 
             <div class="project_card">
-                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt=""></div>
+                <div class="project_card_img cardimg"><img src="./images/btc.jpg" alt="bitcoin logo"></div>
                 <div class="project_card_text">
                     <h3 class="project_card_title oxanium-600">Cryptocurrency Exchange</h3>
-                    <p class="josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase website. Built
+                    <p class="project_blurb josefin-light">Cryptocurrency exchange homepage modeled after the Coinbase
+                        website. Built
                         with HTML, CSS, and Bootstrap.
                     </p>
                     <button class="btn_styling"><a href="./html/currencyProjectPage.html">Project Page</a></button>
@@ -191,22 +198,26 @@
 
     <section id="contact_section">
         <div class="contact_container">
-            <h2 class="josefin-bold pt-2">Contact Me</h2>
+            <h2 class="josefin-bold mt-3">Contact Me</h2>
             <form action="" class="contact_form josefin-light">
                 <div class="contact_field ">
-                    <input type="text" placeholder="Name" class="contact_input">
+                    <input type="text" placeholder="Name" class="contact_input" id="full-name" name="full-name">
                 </div>
 
                 <div class="contact_field">
-                    <input type="email" placeholder="Email" class="contact_input">
+                    <input type="tel" placeholder="Phone Number" class="contact_input" name="tel" id="tel">
                 </div>
 
-                <div class="contact_field" id="message_container">
+                <div class="contact_field">
+                    <input type="email" placeholder="Email" class="contact_input" name="email" id="email">
+                </div>
+
+                <div class="contact_field message_container">
                     <label for="message">Message</label>
-                    <textarea name="" id="contact_message" cols="50" rows="5"></textarea>
+                    <textarea name="message" id="message" cols="50" rows="5"></textarea>
                 </div>
+                <input type="submit" class="form_submit btn_styling" name="submit" value="Submit"></input>
 
-                <input type="submit" class="form_submit btn_styling" id="contact_submit">
             </form>
         </div>
     </section>
