--- a/projects/Coffee_Project/index.html
+++ b/projects/Coffee_Project/index.html
@@ -24,12 +24,12 @@
 
                 <div class="field">
                     <label for="name" class="name">שם מלא</label>
-                    <input type="text" id="name" required>
+                    <input type="text" id="name" name="name" required>
                 </div>
 
                 <div class="field">
                     <label for="email" class="email">דוא״ל</label>
-                    <input type="text" class="email" required>
+                    <input type="text" class="email" name="email" required>
                 </div>
 
                 <button type="submit" class="submit">שליחה</button>
