--- a/projects/Consulting_Project/index.html
+++ b/projects/Consulting_Project/index.html
@@ -42,7 +42,7 @@
                     </div>
 
                     <label for="message">הודעה</label>
-                    <textarea name="message" id="message" rows="5" class="field"></textarea>
+                    <textarea name="message" id="message" name="message" rows="5" class="field"></textarea>
 
                     <button type="submit" class="p-2 ms-auto mt-4 submit">שליחה</button>
                 </div>
