--- a/projects/Giftcard_Project/index.html
+++ b/projects/Giftcard_Project/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <div class="text-container">
@@ -23,12 +23,12 @@
         <div class="form">
             <div class="input-field">
                 <label for="name" class="label">שם</label>
-                <input type="text" class="input">
+                <input type="text" id="name" name="name" class="input">
             </div>
             
             <div class="input-field">
                 <label for="email" class="label">דוא״ל</label>
-                <input type="email" class="input">
+                <input type="email" id="email" name="email" class="input">
             </div>
         </div>
         
