--- a/projects/Travel_Project/index.html
+++ b/projects/Travel_Project/index.html
@@ -35,13 +35,13 @@
 
             <div class="form_fields">
                 <label for="fullName">שם מלא</label>
-                <input type="text" name="" id="fullName">
+                <input type="text" name="fullName" id="fullName">
 
                 <label for="Email">דוא״ל</label>
-                <input type="email" name="" id="Email">
+                <input type="email" name="Email" id="Email">
 
                 <label for="message">החוויה שלכם</label>
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea name="message" id="message" name="message" cols="30" rows="10"></textarea>
 
                 <button type="submit">שליחה</button>
             </div>
