--- a/html/baskeballProjectPage.html
+++ b/html/baskeballProjectPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Basketball Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,31 +24,36 @@
                     Simcha Lapp
                 </a>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
                 <h1 class="hero_header">Summer Basketball League Login</h1>
-                    <p class="header_text">A simple and clean login page for a summer basketball league.</p>
+                <p class="header_text">A youthful and fun login page for a summer basketball
+                    league. Built
+                    with HTML and CSS.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="../projects/Basketball_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Basketball_Project.zip"
+                        download="Basketball Project">Download the project</a></button>
+                <button class="btn_styling"><a href="../projects/Basketball_Project/index.html">View the project
+                        page</a></button>
             </div>
         </div>
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fab fa-bootstrap"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fab fa-bootstrap"></i></div>
     </section>
 
     <section class="project_preview">
-        <img src="../images/project1_snip.png" alt="project 1 screenshot" class="screenshot d-none d-md-block ">
-        <img src="../images/project1_snip_mobile.png" alt="project 1 screenshot " class="screenshot d-md-none d-sm-block ">
+        <img src="../images/basketballProjectSnip.png" alt="project 1 screenshot" class="screenshot d-none d-md-block ">
+        <img src="../images/basketballProjectMobileSnip.png" alt="project 1 screenshot "
+            class="screenshot d-md-none d-sm-block ">
     </section>
 
     <footer>
