--- a/html/codingProjectPage.html
+++ b/html/codingProjectPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Coding Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,34 +24,38 @@
                     Simcha Lapp
                 </a>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
                 <h1 class="hero_header"">Coding Course Sign Up</h1>
-                    <p class=" header_text"">A sign up for a coding course with a bright and abstract design. Built with HTML, CSS, and SASS.</p>
+                    <p class=" header_text"">A sign up for a coding course with a bright and abstract design. Built
+                    with HTML, CSS, and SASS.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file<button>
-                <button class="btn_styling"><a href="../projects/Coding_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Coding_Project.zip"
+                        download="Coding Project">Download the project</a></button>
+                <button class="btn_styling"><a href="../projects/Coding_Project/index.html">View the project
+                        page</a></button>
             </div>
         </div>
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fa-sass"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-sass"></i></div>
     </section>
 
 
     <section class="project_preview">
         <img src="../images/project2_snip.png" alt="project 2 screenshot" class="screenshot d-none d-md-block">
-        <img src="../images/project2_snip_mobile.png" alt="project 2 screenshot" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/project2_snip_mobile.png" alt="project 2 screenshot"
+            class="screenshot_mobile d-sm-block d-md-none">
     </section>
-    
+
 
     <footer>
         <div class="footer_container">
@@ -78,8 +82,8 @@
 
     <script src="https://kit.fontawesome.com/8612f94a58.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
