--- a/html/consultingProjectPage.html
+++ b/html/consultingProjectPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Consulting Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,10 +32,13 @@
         <div class="hero_box">
             <div class="hero_text">
                 <h1 class="hero_header josefin-slab">Consulting Firm Contact Form</h1>
-                <p class=" header_text josefin-sans">A funky contact form for a consulting agency.</p>
+                <p class=" header_text josefin-sans">A funky contact page for a consulting firm. Built with HTML,
+                    CSS, Bootstrap
+                    and SASS.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Consulting_Project.zip"
+                    download="Consulting Project">Download the project</a></button>
                 <button class="btn_styling"><a href="../projects/Consulting_Project/index.html">View the project
                         page</a></button>
             </div>
@@ -43,10 +46,10 @@
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fa-sass"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fab fa-bootstrap"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-sass"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fab fa-bootstrap"></i></div>
     </section>
 
     <section class="project_preview">
