--- a/html/deliveryProjectPage.html
+++ b/html/deliveryProjectPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Delivery Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,21 +35,22 @@
                 <p class="header_text">A funky and retro delivery service. Built using HTML, CSS, and Bootstrap.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Delivery_Project.zip"
+                    download="Delivery Project">Download the project</a></button>
                 <button class="btn_styling"><a href="../projects/Delivery_Project/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x fa-bootstrap"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-bootstrap"></i></div>
     </section>
 
     <section class="project_preview">
-        <img src="../images/project5_snip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
-        <img src="../images/project5_snip_mobile.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
+        <img src="../images/deliveryProjectSnip.png" alt="option 7 screenshot" class="screenshot d-md-block d-none">
+        <img src="../images/deliveryProjectMobileSnip.png" alt="" class="screenshot_mobile d-sm-block d-md-none">
     </section>
 
     <footer>
