--- a/html/travelProjectPage.html
+++ b/html/travelProjectPage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Travel Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,15 +35,16 @@
                 </p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file</button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Travel_Project.zip"
+                    download="Travel Project">Download the project</a></button>
                 <button class="btn_styling"><a href="../projects/Travel_Project/index.html">View the project page</a></button>
             </div>
         </div>
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
     </section>
 
     <section class="project_preview">
