--- a/html/zooProjectPage.html
+++ b/html/zooProjectPage.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>Zoo Project Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Josefin+Slab:ital,wght@0,100..700;1,100..700&display=swap&family=Oxanium:wght@200..800&display=swap&family=SUSE:wght@100..800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="../projects/Zoo_Project/styles/main.css">
 
@@ -26,48 +26,50 @@
                     Simcha Lapp
                 </a>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
                 <h1 class="hero_header"">Zoo Newsletter Sign Up</h1>
-                    <p class=" header_text">Fun and interesting newsletter sign up for a zoo.</p>
+                    <p class=" header_text">Fun and interesting newsletter sign up for a zoo. Built with HTML and CSS.</p>
             </div>
             <div class="hero_buttons">
-                <button class="btn_styling">Download the project file</button>
-                <button class="btn_styling"><a href="../projects/Zoo_Project/index.html">View the project page</a></button>
+                <button class="btn_styling"><a href="../projects/Zipped Projects/Zoo_Project.zip"
+                    download="Zoo Project">Download the project</a></button>
+                <button class="btn_styling"><a href="../projects/Zoo_Project/index.html">View the project
+                        page</a></button>
             </div>
         </div>
     </section>
 
     <section class="project_icon_container">
-        <div class="project_icons"><i class="fa-brands fa-4x fa-html5"></i></div>
-        <div class="project_icons"><i class="fa-brands fa-4x  fa-css3-alt"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x fa-html5"></i></div>
+        <div class="project_icons"><i class="fa-brands fa-3x  fa-css3-alt"></i></div>
     </section>
 
     <section class="project_preview">
         <div class=" green_bg main_container_project">
-        <div class="grid">
-            <div id="welcome">
-                <div id="text">
-                    <h2>Welcome to the Israel Zoo</h2>
-                    <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
+            <div class="grid">
+                <div id="welcome">
+                    <div id="text">
+                        <h2>Welcome to the Israel Zoo</h2>
+                        <p>The national zoo of the State of Israel and the home of animals from all over the world.</p>
+                    </div>
+
+                    <div id="sign_up">
+                        <h2>Sign Up to Our Newsletter</h2>
+                        <input type="text" placeholder="Name" id="info">
+                        <input type="email" name="" id="info" placeholder="Email">
+                        <input type="submit" value="Sign Up" id="submit">
+                    </div>
                 </div>
 
-                <div id="sign_up">
-                    <h2>Sign Up to Our Newsletter</h2>
-                    <input type="text" placeholder="Name" id="info">
-                    <input type="email" name="" id="info" placeholder="Email">
-                    <input type="submit" value="Sign Up" id="submit">
-                </div>
+                <div id="image1"></div>
+                <div id="image2"></div>
+                <div id="image3"></div>
             </div>
-
-            <div id="image1"></div>
-            <div id="image2"></div>
-            <div id="image3"></div>
-        </div>
         </div>
     </section>
 
