--- a/projects/Zoo_Project/index.html
+++ b/projects/Zoo_Project/index.html
@@ -26,8 +26,8 @@
                     <div id="sign_up">
                         <h2>Sign Up to Our Newsletter</h2>
                         <div class="inputs">
-                            <input type="text" placeholder="Name" id="info">
-                            <input type"email" name="" id="info" placeholder="Email">
+                            <input type="text" name="text" placeholder="Name" id="info">
+                            <input type="email" name="email" id="info" placeholder="Email">
                         </div>
 
                         <input type="submit" value="Sign Up" id="submit">
