--- a/html/currencyProjectPage.html
+++ b/html/currencyProjectPage.html
@@ -24,18 +24,19 @@
                     Simcha Lapp
                 </a>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <section id="hero_section" class="project_text">
         <div class="hero_box">
             <div class="hero_text">
                 <h1 class="hero_header"">Cryptocurrency Exchange Homepage</h1>
-                <p class=" header_text"">A modern homepage for a cryptocurrency exchange website.</p>
+                <p class=" header_text"">A modern homepage for a cryptocurrency exchange website based on the Coinbase
+                    website. Built with HTML, CSS, SASS and Bootstrap.</p>
             </div>
             <div class="hero_buttons">
                 <button class="btn_styling"><a href="../projects/Zipped Projects/Currency_Project.zip"
-                    download="Cryptocurrency Project">Download the project</a></button>
+                        download="Cryptocurrency Project">Download the project</a></button>
                 <button class="btn_styling"><a href="../projects/Currency_Project/index.html">View the project
                         page</a></button>
             </div>
